  * Switch back to build-depend on nut-dev - libupsclient1-dev is not
    available in Etch:
    - Limit the "nut" plugin to [!alpha !amd64 !hppa !ia64 !ppc64].
  * Replaced linux-libc-dev build-dependency with linux-kernel-headers.
  * Build-conflict with iptables-dev to force the use of the shipped libiptc
    (this allows building the iptables plugin on all architectures).

 -- Sebastian Harl <sh@tokkee.org>  Thu, 18 Dec 2008 10:24:53 +0100

collectd (4.4.2-3) unstable; urgency=low

  * New debconf template translation:
    - nl.po, thanks to Eric Spreen (Closes: #502204).
    - sv.po, thanks to Martin Bagge (Closes: #504248).
  * debian/patches:
    - Added pod-errors.dpatch to fix some minor POD errors.
  * debian/rules:
    - Remove generated manpages in the clean target to avoid cluttering the
      source diff with the rebuilt manpages.
  * debian/collectd.conf:
    - Fixed a wrong type used in the "tail" plugin example.

 -- Sebastian Harl <sh@tokkee.org>  Sat, 06 Dec 2008 16:53:25 +0100

collectd (4.4.2-2) unstable; urgency=low

  * Removed the work around for #474087 (broken openipmi .pc files) introduced
    in 4.4.1-1 and instead build depend on libopenipmi-dev (>= 2.0.14-1~)
    which includes fixed .pc files. This fixes an undefined symbol error when
    loading the ipmi plugin caused by that work around (Closes: #494665).
  * debian/collectd.init.d:
    - The "status" command now exits with 1 if collectd is not running.
    - Do not suppress output when checking the configuration with the -t
      command line option. This will also show errors that don't cause
      collectd to abort, e.g. failure to load plugins (Closes: #499232).
  * debian/control:
    - Added librrd-dev as the preferred option to the librrd2-dev build
      dependency - the latter one is a virtual package since rrdtool 1.3.
  * Added debian/patches/perl_deadlock.dpatch - upstream patch to fix a
    possible deadlock in the perl plugin (Closes: #499179).