@@ -52,8 +52,14 @@ ifeq (,$(findstring $(DEB_BUILD_ARCH),amd64 i386 powerpc))
 	confflags += --disable-libvirt
 endif
 
+# Force the inclusion of the ipmi plugin and manually specify its
+# dependencies to work around #474087 (broken openipmi .pc files).
+BUILD_WITH_OPENIPMI_LIBS = -lOpenIPMIpthread -lOpenIPMIutils -lOpenIPMI
+confflags += --enable-ipmi
+
 config.status: configure $(DPATCH_STAMPFN)
 	dh_testdir
+	BUILD_WITH_OPENIPMI_LIBS="$(BUILD_WITH_OPENIPMI_LIBS)" \
 	CPPFLAGS="$(CPPFLAGS)" CFLAGS="$(CFLAGS)" ./configure $(confflags)
 
 build: build-stamp
